--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
   </div>
 </nav>
 <body>
-    
+    <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-lg-6">
     <h1 id="aboutMe">About Me</h1>
-        <div class="container">
+                </div>
+        </div>
             <div class="row">
         <div class="col-xs-12 col-lg-6">
      <img src = "img/ID.jpeg"
@@ -50,15 +53,19 @@
          </div>
             </div>
         </div>
- 
+    <div class="container">
+        <div class="row">
+ <div class="col-xs-12 col-lg-6">
     <h1 id="hobby">My Hobbies</h1>
-       <div class="container">
+     <p>Click images below</p>
+    </div>
+        </div>
     <div class="row">
         <div class="col-xs-12 col-lg-6">
-    <img src="img/basketball.png" alt="BasketballIcon" width="200">
+            <a href="index.html"> <img src="img/basketball.png" width="200"></a>
         </div>
          <div class="col-xs-12 col-lg-6">
-    <img src="img/photography.png" alt="PhotographyIcon" width="350">
+             <a href="photographpage.html"><img src="img/photography.png" width="350" ></a>
         </div>
     </div>
     </div>
@@ -71,31 +78,19 @@
         </div>
     <div class="row">
     <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
+        <img src="img/mw1.png" alt="BasketballIcon" width="300">
         </div>
           <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
+        <img src="img/mw2.png" alt="BasketballIcon" width="300">
         </div>
           <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
+        <img src="img/mw3.png" alt="BasketballIcon" width="300">
         </div>
           <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
+        <img src="img/mw4.png" alt="BasketballIcon" width="300">
         </div>
           <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
-        </div>
-          <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
-        </div>
-          <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
-        </div>
-          <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
-        </div>
-          <div class="col-xs-12 col-lg-4"> 
-        <img src="img/basketball.png" alt="BasketballIcon" width="200">
+        <img src="img/mw5.jpg" alt="BasketballIcon" width="300">
         </div>
         </div>
     </div>
