--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
     <div class="row">
         <div class="col-xs-12 col-lg-6">
-            <a href="index.html"> <img src="img/basketball.png" width="200"></a>
+            <a href="basketballPage.html"> <img src="img/basketball.png" width="200"></a>
         </div>
          <div class="col-xs-12 col-lg-6">
              <a href="photographpage.html"><img src="img/photography.png" width="350" ></a>
